setup 404 page svg icon

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,15 @@ input:checked {
 	opacity: 0;
 	z-index: -1;
 }
+
+/*======================
+    404 page
+=======================*/
+
+.page_404 {
+	display: flex;
+	justify-content: center;
+	margin-top: 8rem;
+	background: transparent;
+	font-family: "Arvo", serif;
+}
