add premium detail page

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,13 @@ input:checked {
 	opacity: 0;
 	z-index: -1;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+	display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
