--- a/app/fontFace.css
+++ b/app/fontFace.css
@@ -6,8 +6,8 @@
 }
 
 @font-face {
-  font-family: 'Zaw-gyi ONE';
-  src: url('https://raw.githubusercontent.com/Kaung-Htet-Naing/MMfonts/develop/public/fonts/Zaw-One/Regular.ttf') format('truetype');
+  font-family: 'ZawgyiOne';
+  src: url('https://raw.githubusercontent.com/Kaung-Htet-Naing/MMfonts/develop/public/fonts/ZawgyiOne/Regular.ttf') format('truetype');
   font-weight: Regular;
   font-style: Regular;
 }
@@ -84,9 +84,16 @@
 
 @font-face {
   font-family: 'M-Myanmar1';
-  src: url('https://raw.githubusercontent.com/Kaung-Htet-Naing/MMfonts/develop/public/fonts/M-Myanmar1/Regular.ttf') format('truetype');
-  font-weight: Regular;
-  font-style: Regular;
+  src: url('https://raw.githubusercontent.com/Kaung-Htet-Naing/MMfonts/develop/public/fonts/M-Myanmar1/Bold.ttf') format('truetype');
+  font-weight: Bold;
+  font-style: Bold;
+}
+
+@font-face {
+  font-family: 'M-Myanmar1';
+  src: url('https://raw.githubusercontent.com/Kaung-Htet-Naing/MMfonts/develop/public/fonts/M-Myanmar1/Normal.ttf') format('truetype');
+  font-weight: Normal;
+  font-style: Normal;
 }
 
 @font-face {
