--- a/app/quill.css
+++ b/app/quill.css
@@ -89,7 +89,6 @@ span {
   border: 2px solid black !important;
   border-radius: 4px;
   background-color: #edb92b;
-  padding: 12px !important;
 }
 .ql-hidden {
   display: none;
@@ -218,6 +217,17 @@ img {
   position: relative;
   vertical-align: middle;
 }
+.ql-snow .ql-picker.ql-font {
+  width: 180px !important;
+}
+
+.ql-picker-label .ql-active {
+  width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .ql-picker-label {
   cursor: pointer;
   display: inline-block;
@@ -416,7 +426,7 @@ img {
   border: 1px solid #ccc;
   box-sizing: border-box;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  padding: 8px;
+  padding: 4px;
 }
 .ql-toolbar.ql-formats {
   margin-right: 15px;
