init coommit for author screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,3 +72,84 @@ input:checked {
 .font-local {
   font-family: 'GoldmanBold';
 }
+
+.menu {
+  position: relative;
+  padding: 30px;
+  background: #e8e8f3;
+  border-radius: 100%;
+  cursor: pointer;
+  &::before,
+  &::after {
+    content: '';
+    background: #c3c2c7;
+    border-radius: 5px;
+    width: 30px;
+    height: 5px;
+    position: absolute;
+    left: 16px;
+    top: 27px;
+    transition: 0.2s ease;
+    z-index: 1;
+  }
+  &::before {
+    transform: rotate(0deg);
+  }
+  &::after {
+    transform: rotate(-90deg);
+  }
+  &.open {
+    opacity: 0.9;
+    &::before {
+      transform: rotate(45deg);
+    }
+    &::after {
+      transform: rotate(-45deg);
+    }
+    .button {
+      opacity: 1;
+      pointer-events: auto;
+      &:first-of-type {
+        bottom: -70px;
+        right: 0px;
+        background: url('https://bassets.github.io/cam.svg') no-repeat 50%/50% #e8e8f3;
+      }
+      &:nth-of-type(2) {
+        bottom: -35px;
+        right: -50px;
+        background: url('https://bassets.github.io/img.svg') no-repeat 50%/ 50% #e8e8f3;
+        transition-delay: 0.05s;
+      }
+      &:last-of-type {
+        bottom: 40px;
+        right: -70px;
+        background: url('https://bassets.github.io/music.svg') no-repeat 50% 45%/50% 45% #e8e8f3;
+        transition-delay: 0.1s;
+      }
+    }
+  }
+}
+
+.button {
+  padding: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  background: #e8e8f3;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  pointer-events: none;
+  box-shadow: inherit;
+  transition: 0.2s cubic-bezier(0.18, 0.89, 0.32, 1.28), 0.2s ease opacity,
+    0.2s cubic-bezier(0.08, 0.82, 0.17, 1) transform;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+.slick-slide > div {
+  margin: 0 10px;
+}
+.slick-list {
+  margin: 0 -10px;
+}
